# quicly-dgram

./: CMakeLists.txt  README.md  parsestat.py  quicly-probes.d  quictrace-adapter.py
fuzz/: packet.cc
gst_src/: quicly_stream.c  udp_stream.c
include/: quicly.h
include/quicly/: frame.h  loss.h  sentmap.h  streambuf.h
lib/: defaults.c  frame.c  quicly.c  sentmap.c  streambuf.c
libgstquiclysink/: gstquiclysink.c  gstquiclysink.h
libgstquiclysrc/: gstquiclysrc.c  gstquiclysrc.h  gstquiclysrc_bufferlists.c  gstquiclysrc_startup_in_fill.c  gstquiclysrc_startup_in_startl.c
misc/: build_libFuzzer.sh
src/: cli.c
t/: e2e.t  frame.c  loss.c
